<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vistas.DatosPuntos"
    android:orientation="vertical">
    <TextView
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alta_puntos_de_recarga" />

    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:hint="@string/codigo"
        android:textColorHint="@color/design_default_color_background">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/denominacion"
        android:textColorHint="@color/design_default_color_background"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtDenominacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/tipo"
        android:textColorHint="@color/design_default_color_background"
        app:endIconMode="clear_text"
        app:helperText="@string/requerido">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEstablecimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/direccion"
        android:textColorHint="@color/design_default_color_background"
        app:endIconMode="clear_text"
        app:helperText="@string/requerido">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/provincia"
        android:textColorHint="@color/design_default_color_background"
        app:endIconMode="clear_text"
        app:helperText="@string/requerido">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtProvincia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/cargadores"
        android:textColorHint="@color/design_default_color_background"
        app:endIconMode="clear_text"
        app:helperText="@string/requerido">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtCargadores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/indicaciones"
        android:textColorHint="@color/design_default_color_background"
        app:endIconMode="clear_text"
        app:helperText="@string/requerido">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtIndicaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/precio"
        android:textColorHint="@color/design_default_color_background"
        app:endIconMode="clear_text"
        app:helperText="@string/requerido">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"

        >
        <Button
            android:id="@+id/btGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/guardar"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton" />
        <Button
            android:id="@+id/btCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cancelar"
            android:layout_margin="20dp"

            style="@style/Widget.MaterialComponents.Button.UnelevatedButton" />
        <Button
            android:id="@+id/btRegresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/regresar"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton" />

    </LinearLayout>


</LinearLayout>
